--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>12‑Slide Birthday Surprise 🎂✨</title>
-
+<title>12-Slide Birthday Surprise 🎂✨</title>
 <style>
     body {
         font-family: "Poppins", sans-serif;
@@ -12,7 +11,6 @@
         background: #ffe5d4;
         overflow: hidden;
     }
-
     .page {
         display: none;
         height: 100vh;
@@ -20,17 +18,14 @@
         padding: 20px;
         text-align: center;
         animation: fadeIn 0.6s ease-in-out;
+        box-sizing: border-box;
     }
-
     .active { display: block; }
-
     @keyframes fadeIn {
         from {opacity: 0; transform: translateY(20px);}    
         to {opacity: 1; transform: translateY(0);}    
     }
-
-    h1 { font-size: 30px; color: #c05b4d; }
-
+    h1 { font-size: 30px; color: #c05b4d; margin: 10px 0; }
     .btn {
         background: #ff9f8c;
         padding: 12px 25px;
@@ -40,27 +35,23 @@
         margin-top: 20px;
         color: white;
         cursor: pointer;
-        transition: 0.3s;
+        transition: 0.2s;
     }
-
-    .btn:hover { transform: scale(1.08); }
-
+    .btn:hover { transform: scale(1.06); }
     .emoji { font-size: 55px; margin-bottom: 15px; }
-
     .card-box {
         background: white;
         padding: 18px;
-        margin: 25px;
+        margin: 25px auto;
         border-radius: 15px;
         box-shadow: 0 0 10px #e8b2a3;
+        max-width: 820px;
     }
 </style>
 </head>
-
 <body>
 
-<!-- 12 SLIDES BELOW -->
-
+<!-- 12 SLIDES -->
 <div id="page1" class="page active">
     <div class="emoji">🎉🎈</div>
     <h1 id="title">Happpiii Birthdayyyy Nidhi ❤️</h1>
@@ -71,7 +62,7 @@
 <div id="page2" class="page">
     <div class="emoji">🌷</div>
     <h1>Slide 1</h1>
-    <p class="card-box">I hope today brings you calm, peace and much‑needed softness ❤️</p>
+    <p class="card-box">I hope today brings you calm, peace and much-needed softness ❤️</p>
     <button class="btn" onclick="nextPage()">Next ➜</button>
 </div>
 
@@ -150,25 +141,27 @@
     <h1>Slide 12</h1>
     <p class="card-box" id="lastmsg">
         Happpiii Birthdayyyy Nidhi 🩷<br>
-        I hope this small 12‑slide surprise made your day a little brighter 🌷
+        I hope this small 12-slide surprise made your day a little brighter 🌷
     </p>
 </div>
 
 <script>
 let page = 1;
+const totalPages = 13;
 
 function nextPage() {
+    if (page >= totalPages) return; // stop at last slide
     document.getElementById("page" + page).classList.remove("active");
     page++;
     document.getElementById("page" + page).classList.add("active");
 }
 
-// Name from URL
-t const params = new URLSearchParams(window.location.search);
+// Apply name from URL (fixed syntax error)
+const params = new URLSearchParams(window.location.search);
 const name = params.get("name") || "Nidhi";
 
 document.getElementById("title").innerText = `Happpiii Birthdayyyy ${name} ❤️`;
-document.getElementById("lastmsg").innerHTML = `Happpiii Birthdayyyy ${name} 🩷<br> I hope this small 12‑slide surprise made your day a little brighter 🌷`;
+document.getElementById("lastmsg").innerHTML = `Happpiii Birthdayyyy ${name} 🩷<br> I hope this small 12-slide surprise made your day a little brighter 🌷`;
 </script>
 
 </body>
