--- a/index.html
+++ b/index.html
@@ -4,66 +4,77 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Birthday Surprise Card</title>
+
+<!-- Poppins -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 <style>
   :root{
     --peach:#ffe5d4;
     --title:#c05b4d;
     --btn:#ff9f8c;
-    --card-shadow:#f2c9bf;
+    --card-shadow: rgba(230,154,138,0.45);
     --pastel-pink:#ffd8e8;
     --pastel-purple:#cdb7ff;
   }
 
-  /* reset small things that sometimes show borders on desktop */
-  *{ box-sizing:border-box; outline:none; }
-  html,body{ height:100%; margin:0; padding:0; background:var(--peach); -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
+  /* Reset */
+  *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
+  html,body{ height:100%; margin:0; padding:0; background:var(--peach); font-family:"Poppins",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
 
-  .page{ display:none; height:100vh; width:100vw; padding:28px 24px; position:relative; overflow:hidden; text-align:center; }
+  /* Pages */
+  .page{ display:none; height:100vh; width:100vw; padding:28px 22px; position:relative; overflow:hidden; text-align:center; }
   .active{ display:block; }
-  h1{ font-family: "Poppins", sans-serif; color:var(--title); font-size:34px; margin:8px 0 6px; }
-  .emoji{ font-size:56px; margin-bottom:10px; pointer-events:none; }
 
-  .card-box{
-    background:#fff; margin:18px auto; padding:18px; border-radius:14px; max-width:820px; box-shadow:0 12px 30px rgba(0,0,0,0.06); text-align:center;
-  }
+  /* global decorative layer behind content */
+  .global-decor { position:absolute; inset:0; z-index:0; pointer-events:none; opacity:0.14; }
+
+  h1{ color:var(--title); font-size:34px; margin:6px 0 8px; font-weight:700; position:relative; z-index:2; }
+  .emoji{ font-size:56px; margin-bottom:10px; position:relative; z-index:2; }
+
+  .card-box{ background:#fff; margin:18px auto; padding:18px; border-radius:14px; max-width:820px; box-shadow:0 12px 30px var(--card-shadow); text-align:center; position:relative; z-index:3; }
   .btn{ background:var(--btn); border:none; color:#fff; padding:12px 24px; border-radius:14px; font-size:18px; cursor:pointer; }
 
-  .subtitle{ color:#975044; font-size:18px; margin-bottom:12px; }
+  .subtitle{ color:#975044; font-size:18px; margin-bottom:12px; position:relative; z-index:2; }
 
-  /* HEART RAIN */
-  .heart-rain{ position:absolute; inset:0; pointer-events:none; z-index:4; overflow:hidden; }
-  .heart{ position:absolute; top:-5%; font-size:20px; opacity:.95; transform:translateY(-10px); will-change:transform,opacity; animation-name:fall,sway,fadeInSmall; animation-timing-function:linear,ease-in-out,ease-in; animation-iteration-count:infinite,infinite,1; }
+  /* HEART RAIN (first slide) */
+  .heart-rain{ position:absolute; inset:0; pointer-events:none; z-index:2; overflow:hidden; }
+  .heart{ position:absolute; top:-5%; will-change:transform,opacity; animation-name:fall,sway,fadeInSmall; animation-timing-function:linear,ease-in-out,ease-in; animation-iteration-count:infinite,infinite,1; }
+
   @keyframes fall{ to{ transform: translateY(120vh); } }
   @keyframes sway{ 0%{ transform:translateX(0) } 50%{ transform:translateX(12px) } 100%{ transform:translateX(0) } }
   @keyframes fadeInSmall{ from{ opacity:0; transform:scale(.9) } to{ opacity:.95; transform:scale(1) } }
 
-  /* slide 2 background decorations (behind content) */
-  .slide2-bg{
-    position:absolute; inset:0; z-index:1; pointer-events:none; opacity:.18; display:block;
-    background-repeat:no-repeat;
-    background-position: center 40%;
-    background-size: 640px;
+  .muted-medium{ font-size:20px; color:var(--pastel-purple); font-weight:600; margin-top:6px; position:relative; z-index:2; }
+
+  .pastel-pink-desc{ background:var(--pastel-pink); padding:14px; border-radius:12px; display:inline-block; text-align:left; color:#6b2f38; font-size:17px; max-width:820px; margin-top:14px; position:relative; z-index:3; }
+
+  .cursive { /* still using Poppins but slightly styled as "message" */
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight:400;
+    font-size:18px;
+    color:#000;
+    text-align:left;
+    line-height:1.6;
+    white-space:pre-wrap;
+    position:relative;
+    z-index:3;
   }
-  /* small decorative row (non-background fallback for very small screens) */
-  .decor-row{ display:flex; gap:14px; justify-content:center; align-items:center; margin-bottom:8px; z-index:5; position:relative; }
 
-  .muted-medium{ font-size:20px; color:var(--pastel-purple); font-weight:600; margin-top:6px; }
-
-  .pastel-pink-desc{ background:var(--pastel-pink); padding:14px; border-radius:12px; display:inline-block; text-align:left; color:#6b2f38; font-size:17px; max-width:820px; margin-top:14px; z-index:6; position:relative; }
-
-  .cursive{ font-family:"Brush Script MT","Lucida Handwriting",cursive; font-size:18px; color:#000; text-align:left; line-height:1.6; white-space:pre-wrap; }
-
-  /* ensure content sits above background decorations */
-  .content-on-top{ position:relative; z-index:6; }
+  /* make sure visible content sits above decorations */
+  .content-on-top { position:relative; z-index:3; }
 
   @media(max-width:600px){
     h1{ font-size:26px; }
     .emoji{ font-size:44px; }
-    .decor-row{ display:none; } /* hide fallback row on tiny screens */
   }
 </style>
 </head>
 <body>
+
+<!-- Decorations layer (will be filled per-page by JS) -->
+<div id="decorLayer" class="global-decor" aria-hidden="true"></div>
 
 <!-- PAGE 1 -->
 <div id="page1" class="page active">
@@ -72,7 +83,6 @@
   <div class="emoji" aria-hidden="true">🎈🎉🌸🎂</div>
   <h1 id="title">Wishing You Happpiii Birthdayyyy Nidhi 🎈</h1>
 
-  <!-- subtitle WITHOUT hyphen as you requested -->
   <p class="subtitle content-on-top">A little surprise waiting for you. Hope you'll like it.</p>
 
   <div class="card-box content-on-top">
@@ -83,18 +93,10 @@
 
 <!-- PAGE 2 -->
 <div id="page2" class="page">
-  <!-- decorative background placed behind card (SVG-like using emoji image) 
-       We use a small inline SVG dataURL to keep it local and consistent.
-       The background includes chocolate, balloons, and colored hearts arranged as pattern.
-  -->
-  <div class="slide2-bg" id="slide2bg" style="background-image:
-    url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22640%22 height=%22640%22><text font-size=%2248%22 y=%2250%22 x=%2250%22>🍫</text><text font-size=%2248%22 y=%2290%22 x=%22110%22>🎈🎈</text><text font-size=%2248%22 y=%22160%22 x=%2260%22>❤️ 💚 💙 💜 💛</text></svg>');">
-  </div>
-
   <div class="content-on-top">
     <h1>Just For You 💐🎂</h1>
 
-    <div class="muted-medium">Congratulations on your 19 or 20th birthday — I don't know your real age, so kindly adjust it 😅</div>
+    <div class="muted-medium">Congratulations on your 19 or 20th birthday, I don't know your real age, so kindly adjust it 😅</div>
 
     <div class="pastel-pink-desc card-box">
       May your birthday be sprinkled with warm sunshine, easy giggles, and those soft little smiles that show up without warning and make your whole day glow. And may this special day whisper to you gently but adorably that the world feels a tiny bit sweeter just because you’re in it. 💛
@@ -109,11 +111,13 @@
   <div class="emoji">🧙🏻🤞🏻</div>
   <h1>Make a Wish ✨</h1>
 
-  <div class="card-box" style="text-align:left; margin-top:10px;">
+  <div class="card-box content-on-top" style="text-align:left;">
     <p style="font-weight:600; margin-bottom:10px;">I may not know what you’re wishing for, but I really hope the thing your heart is asking for reaches you soon. 🌷</p>
+
     <p style="margin:0 0 12px 0;">
-      Close your eyes for a moment and make a small wish — the kind that quietly sits in your heart. Let it float out into the world, nice and easy. And I really hope it finds you today, in the simplest, sweetest way… and keeps bringing little moments of happiness your way for a long, long time. 🤞🏻🩷
+      Close your eyes for a moment and make a small wish, the kind that quietly sits in your heart. Let it float out into the world, nice and easy. And I really hope it finds you today, in the simplest, sweetest way… and keeps bringing little moments of happiness your way for a long, long time. 🤞🏻🩷
     </p>
+
     <div style="text-align:center;"><button class="btn" onclick="nextPage()">Next ➜</button></div>
   </div>
 </div>
@@ -123,7 +127,7 @@
   <div class="emoji">💌</div>
   <h1>This is a small message from me 💌</h1>
 
-  <div class="card-box" style="text-align:left;">
+  <div class="card-box content-on-top" style="text-align:left;">
     <p class="cursive">
 First of all, a very happy, happy birthday to you, Nidhi. You’ve probably forgotten me by now, but this is just a small gift from my side, something I hope brings a little smile to your face. I won’t say much, but wherever you are, I genuinely wish you happiness. Enjoy your special day… and your life too. I didn’t add any photos of us because we don’t really have any special pictures or memories together, and I even thought about taking a picture from your Instagram, but it felt like invading your privacy, so I chose not to. I just hope you’ll like this small gesture, and even if we don’t talk much anymore, I still wish that kindness and good things keep finding you. Take care, and have a beautiful birthday. ^_^
     </p>
@@ -133,71 +137,98 @@ First of all, a very happy, happy birthday to you, Nidhi. You’ve probably forg
 </div>
 
 <script>
-  /* Name from URL */
-  const params = new URLSearchParams(window.location.search);
-  const name = params.get('name') || 'Nidhi';
-  document.getElementById('title').innerText = `Wishing You Happpiii Birthdayyyy ${name} 🎈`;
+/* name param */
+const params = new URLSearchParams(window.location.search);
+const name = params.get('name') || 'Nidhi';
+document.getElementById('title').innerText = `Wishing You Happpiii Birthdayyyy ${name} 🎈`;
 
-  /* page logic */
-  let page = 1;
-  function nextPage(){
-    if(page === 1) stopHeartRain();
-    document.getElementById('page' + page).classList.remove('active');
-    page++;
-    if(!document.getElementById('page' + page)){
-      page = 4;
-    }
-    document.getElementById('page' + page).classList.add('active');
+/* page control */
+let page = 1;
+function nextPage(){
+  if(page === 1) stopHeartRain();
+  document.getElementById('page' + page).classList.remove('active');
+  page++;
+  if(!document.getElementById('page' + page)) page = 4;
+  document.getElementById('page' + page).classList.add('active');
+}
+
+/* Heart rain on first slide */
+const heartContainer = document.getElementById('heartRain');
+let heartInterval = null;
+const heartEmojis = ['💜','💛','💙','❤','💚'];
+
+function randomBetween(min,max){ return Math.random()*(max-min)+min; }
+
+function createHeart(){
+  const s = document.createElement('span');
+  s.className = 'heart';
+  s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
+  s.style.left = randomBetween(2,94) + 'vw';
+  const size = Math.floor(randomBetween(16,32));
+  s.style.fontSize = size + 'px';
+  const duration = randomBetween(10,20); // slower
+  s.style.animationDuration = `${duration}s, ${randomBetween(3,6)}s, 0.6s`;
+  s.style.opacity = (randomBetween(.7,1)).toString();
+  s.style.zIndex = 2; // above background, below cards
+  heartContainer.appendChild(s);
+  setTimeout(()=>{ if(s && s.parentNode) s.remove(); }, (duration+1)*1000);
+}
+
+function startHeartRain(){
+  for(let i=0;i<8;i++) setTimeout(createHeart, i*300);
+  if(!heartInterval){
+    heartInterval = setInterval(()=>{
+      const n = Math.random()>0.6 ? 2 : 1;
+      for(let i=0;i<n;i++) createHeart();
+    }, 700);
   }
+}
+function stopHeartRain(){
+  if(heartInterval){ clearInterval(heartInterval); heartInterval = null; }
+  document.querySelectorAll('#heartRain .heart').forEach(h=>h.remove());
+}
+window.addEventListener('load', ()=>{
+  if(document.getElementById('page1').classList.contains('active')) startHeartRain();
+});
 
-  /* HEART RAIN (visible) */
-  const heartContainer = document.getElementById('heartRain');
-  let heartInterval = null;
-  const heartEmojis = ['💜','💛','💙','❤','💚'];
+/* Global decorative background across all pages:
+   create many emoji elements (chocolate, balloons, hearts) and place them randomly,
+   with low opacity. They are behind content (z-index:0).
+*/
+const decorChars = ['🍫','🎈','❤️','💚','💙','💜','💛'];
+const decorLayer = document.getElementById('decorLayer');
 
-  function randomBetween(min,max){ return Math.random()*(max-min)+min; }
-
-  function createHeart(){
-    const s = document.createElement('span');
-    s.className = 'heart';
-    s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-    s.style.left = randomBetween(2,94) + 'vw';
-    const size = Math.floor(randomBetween(16,32));
-    s.style.fontSize = size + 'px';
-    const duration = randomBetween(9,18); // slower
-    s.style.animationDuration = `${duration}s, ${randomBetween(3,6)}s, 0.6s`;
-    s.style.opacity = (randomBetween(.7,1)).toString();
-    s.style.zIndex = 4; // ensure above bg, below interactive content
-    heartContainer.appendChild(s);
-    // cleanup
-    setTimeout(()=>{ if(s && s.parentNode) s.remove(); }, (duration+1)*1000);
+function addDecor(count = 36){
+  // Clear first
+  decorLayer.innerHTML = '';
+  const w = window.innerWidth;
+  const h = window.innerHeight;
+  for(let i=0;i<count;i++){
+    const el = document.createElement('div');
+    el.style.position = 'absolute';
+    // random positions across a larger canvas so when you scroll or different view sizes it still fills
+    const left = Math.floor(Math.random()*120) - 10; // -10% to 110%
+    const top = Math.floor(Math.random()*120) - 10;
+    el.style.left = left + 'vw';
+    el.style.top = top + 'vh';
+    el.style.fontSize = (Math.floor(Math.random()*64) + 28) + 'px'; // various sizes
+    el.style.opacity = (Math.random()*0.25 + 0.08).toString(); // subtle
+    el.style.transform = `rotate(${Math.floor(Math.random()*60)-30}deg)`;
+    el.style.pointerEvents = 'none';
+    el.style.zIndex = 0;
+    el.innerText = decorChars[Math.floor(Math.random()*decorChars.length)];
+    decorLayer.appendChild(el);
   }
+}
 
-  function startHeartRain(){
-    // spawn some initial hearts
-    for(let i=0;i<8;i++){
-      setTimeout(createHeart, i*250);
-    }
-    if(!heartInterval){
-      heartInterval = setInterval(()=>{
-        const n = Math.random()>0.6 ? 2 : 1;
-        for(let i=0;i<n;i++) createHeart();
-      }, 700);
-    }
-  }
-  function stopHeartRain(){
-    if(heartInterval){ clearInterval(heartInterval); heartInterval = null; }
-    document.querySelectorAll('#heartRain .heart').forEach(h=>h.remove());
-  }
+// call once and also on resize to adapt
+addDecor(40);
+window.addEventListener('resize', ()=> addDecor(40));
 
-  window.addEventListener('load', ()=>{
-    // start hearts only if page1 active
-    if(document.getElementById('page1').classList.contains('active')) startHeartRain();
-  });
+/* ensure no element keeps focus (fix outline on desktop) */
+window.addEventListener('click', ()=>{ document.activeElement && document.activeElement.blur && document.activeElement.blur(); });
 
-  // desktop screen black border: sometimes a browser adds outline on focus.
-  // ensure nothing is focused visually:
-  window.addEventListener('click', ()=>{ document.activeElement.blur && document.activeElement.blur(); });
 </script>
+
 </body>
 </html>
