--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     --pastel-purple:#cdb7ff;
   }
 
-  /* Reset */
+  /* Reset + prevent horizontal scroll (fix for content shifting left) */
   *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
-  html,body{ height:100%; margin:0; padding:0; background:var(--peach); font-family:"Poppins",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
+  html,body{ height:100%; margin:0; padding:0; background:var(--peach); font-family:"Poppins",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; overflow-x:hidden; }
 
   /* Pages */
   .page{ display:none; height:100vh; width:100vw; padding:28px 22px; position:relative; overflow:hidden; text-align:center; }
   .active{ display:block; }
 
   /* global decorative layer behind content */
-  .global-decor { position:absolute; inset:0; z-index:0; pointer-events:none; opacity:0.14; }
+  .global-decor { position:absolute; inset:0; z-index:0; pointer-events:none; }
 
-  h1{ color:var(--title); font-size:34px; margin:6px 0 8px; font-weight:700; position:relative; z-index:2; }
-  .emoji{ font-size:56px; margin-bottom:10px; position:relative; z-index:2; }
+  h1{ color:var(--title); font-size:34px; margin:6px 0 8px; font-weight:700; position:relative; z-index:3; }
+  .emoji{ font-size:56px; margin-bottom:10px; position:relative; z-index:3; }
 
-  .card-box{ background:#fff; margin:18px auto; padding:18px; border-radius:14px; max-width:820px; box-shadow:0 12px 30px var(--card-shadow); text-align:center; position:relative; z-index:3; }
+  .card-box{ background:#fff; margin:18px auto; padding:18px; border-radius:14px; max-width:820px; box-shadow:0 12px 30px var(--card-shadow); text-align:center; position:relative; z-index:4; }
   .btn{ background:var(--btn); border:none; color:#fff; padding:12px 24px; border-radius:14px; font-size:18px; cursor:pointer; }
 
-  .subtitle{ color:#975044; font-size:18px; margin-bottom:12px; position:relative; z-index:2; }
+  .subtitle{ color:#975044; font-size:18px; margin-bottom:12px; position:relative; z-index:3; }
 
   /* HEART RAIN (first slide) */
   .heart-rain{ position:absolute; inset:0; pointer-events:none; z-index:2; overflow:hidden; }
@@ -45,25 +45,30 @@
   @keyframes sway{ 0%{ transform:translateX(0) } 50%{ transform:translateX(12px) } 100%{ transform:translateX(0) } }
   @keyframes fadeInSmall{ from{ opacity:0; transform:scale(.9) } to{ opacity:.95; transform:scale(1) } }
 
-  .muted-medium{ font-size:20px; color:var(--pastel-purple); font-weight:600; margin-top:6px; position:relative; z-index:2; }
+  .muted-medium{ font-size:20px; color:var(--pastel-purple); font-weight:600; margin-top:6px; position:relative; z-index:3; }
 
-  .pastel-pink-desc{ background:var(--pastel-pink); padding:14px; border-radius:12px; display:inline-block; text-align:left; color:#6b2f38; font-size:17px; max-width:820px; margin-top:14px; position:relative; z-index:3; }
+  .pastel-pink-desc{ background:var(--pastel-pink); padding:14px; border-radius:12px; display:inline-block; text-align:left; color:#6b2f38; font-size:17px; max-width:820px; margin-top:14px; position:relative; z-index:4; }
 
-  .cursive { /* still using Poppins but slightly styled as "message" */
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight:400;
+  /* cursive paragraph for slide 4 */
+  .cursive {
+    font-family: "Brush Script MT", "Lucida Handwriting", "Segoe Script", cursive, serif;
     font-size:18px;
     color:#000;
     text-align:left;
     line-height:1.6;
     white-space:pre-wrap;
     position:relative;
-    z-index:3;
+    z-index:4;
   }
 
-  /* make sure visible content sits above decorations */
-  .content-on-top { position:relative; z-index:3; }
+  /* decoration items (emoji) used across the page */
+  .decor-item {
+    position:absolute;
+    pointer-events:none;
+    user-select:none;
+    transform-origin:center center;
+    will-change:transform,opacity;
+  }
 
   @media(max-width:600px){
     h1{ font-size:26px; }
@@ -73,7 +78,7 @@
 </head>
 <body>
 
-<!-- Decorations layer (will be filled per-page by JS) -->
+<!-- Decorations layer -->
 <div id="decorLayer" class="global-decor" aria-hidden="true"></div>
 
 <!-- PAGE 1 -->
@@ -163,12 +168,14 @@ function createHeart(){
   const s = document.createElement('span');
   s.className = 'heart';
   s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-  s.style.left = randomBetween(2,94) + 'vw';
+  // keep hearts inside viewport using % and translate
+  const leftPct = randomBetween(5,95);
+  s.style.left = leftPct + 'vw';
   const size = Math.floor(randomBetween(16,32));
   s.style.fontSize = size + 'px';
   const duration = randomBetween(10,20); // slower
   s.style.animationDuration = `${duration}s, ${randomBetween(3,6)}s, 0.6s`;
-  s.style.opacity = (randomBetween(.7,1)).toString();
+  s.style.opacity = (randomBetween(.75,1)).toString();
   s.style.zIndex = 2; // above background, below cards
   heartContainer.appendChild(s);
   setTimeout(()=>{ if(s && s.parentNode) s.remove(); }, (duration+1)*1000);
@@ -191,44 +198,43 @@ window.addEventListener('load', ()=>{
   if(document.getElementById('page1').classList.contains('active')) startHeartRain();
 });
 
-/* Global decorative background across all pages:
-   create many emoji elements (chocolate, balloons, hearts) and place them randomly,
-   with low opacity. They are behind content (z-index:0).
+/* Global decorative background across all pages (chocolate, balloons, hearts).
+   Improvements:
+   - Use percentage positions and translate(-50%,-50%) to avoid pushing layout off-screen.
+   - Increased opacity range so items are more visible.
+   - Added clustering across the whole page and resized on window resize.
 */
 const decorChars = ['🍫','🎈','❤️','💚','💙','💜','💛'];
 const decorLayer = document.getElementById('decorLayer');
 
-function addDecor(count = 36){
-  // Clear first
+function addDecor(count = 40){
   decorLayer.innerHTML = '';
-  const w = window.innerWidth;
-  const h = window.innerHeight;
   for(let i=0;i<count;i++){
     const el = document.createElement('div');
-    el.style.position = 'absolute';
-    // random positions across a larger canvas so when you scroll or different view sizes it still fills
-    const left = Math.floor(Math.random()*120) - 10; // -10% to 110%
-    const top = Math.floor(Math.random()*120) - 10;
-    el.style.left = left + 'vw';
-    el.style.top = top + 'vh';
-    el.style.fontSize = (Math.floor(Math.random()*64) + 28) + 'px'; // various sizes
-    el.style.opacity = (Math.random()*0.25 + 0.08).toString(); // subtle
-    el.style.transform = `rotate(${Math.floor(Math.random()*60)-30}deg)`;
-    el.style.pointerEvents = 'none';
+    el.className = 'decor-item';
+    const left = Math.random() * 100; // percent
+    const top = Math.random() * 100;  // percent
+    el.style.left = left + '%';
+    el.style.top = top + '%';
+    el.style.transform = 'translate(-50%,-50%) rotate(' + (Math.floor(Math.random()*60)-30) + 'deg)';
+    // visible sizes but not overpowering
+    const size = Math.floor(Math.random()*46) + 22; // 22 - 68 px
+    el.style.fontSize = size + 'px';
+    // increased opacity so decorations are visible but still soft
+    el.style.opacity = (Math.random() * 0.25 + 0.18).toString(); // 0.18 - 0.43
     el.style.zIndex = 0;
     el.innerText = decorChars[Math.floor(Math.random()*decorChars.length)];
     decorLayer.appendChild(el);
   }
 }
 
-// call once and also on resize to adapt
-addDecor(40);
-window.addEventListener('resize', ()=> addDecor(40));
+// initial call and on resize
+addDecor(44);
+window.addEventListener('resize', ()=> addDecor(44));
 
-/* ensure no element keeps focus (fix outline on desktop) */
+/* ensure no element keeps focus (avoid outlines / accidental scroll focus) */
 window.addEventListener('click', ()=>{ document.activeElement && document.activeElement.blur && document.activeElement.blur(); });
 
 </script>
-
 </body>
 </html>
