--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     --pastel-purple:#cdb7ff;
   }
 
-  /* Reset + prevent horizontal scroll (fix for content shifting left) */
+  /* Reset + prevent horizontal scroll */
   *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
   html,body{ height:100%; margin:0; padding:0; background:var(--peach); font-family:"Poppins",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; overflow-x:hidden; }
 
@@ -32,7 +32,18 @@
   h1{ color:var(--title); font-size:34px; margin:6px 0 8px; font-weight:700; position:relative; z-index:3; }
   .emoji{ font-size:56px; margin-bottom:10px; position:relative; z-index:3; }
 
-  .card-box{ background:#fff; margin:18px auto; padding:18px; border-radius:14px; max-width:820px; box-shadow:0 12px 30px var(--card-shadow); text-align:center; position:relative; z-index:4; }
+  /* stronger, opaque card so text always readable */
+  .card-box{
+    background: rgba(255,255,255,0.98);
+    margin:18px auto;
+    padding:20px;
+    border-radius:14px;
+    max-width:820px;
+    box-shadow:0 18px 36px rgba(0,0,0,0.08);
+    text-align:center;
+    position:relative;
+    z-index:4;
+  }
   .btn{ background:var(--btn); border:none; color:#fff; padding:12px 24px; border-radius:14px; font-size:18px; cursor:pointer; }
 
   .subtitle{ color:#975044; font-size:18px; margin-bottom:12px; position:relative; z-index:3; }
@@ -55,8 +66,10 @@
     font-size:18px;
     color:#000;
     text-align:left;
-    line-height:1.6;
+    line-height:1.7;
     white-space:pre-wrap;
+    margin:0;
+    padding:0 6px;
     position:relative;
     z-index:4;
   }
@@ -73,6 +86,7 @@
   @media(max-width:600px){
     h1{ font-size:26px; }
     .emoji{ font-size:44px; }
+    .card-box{ padding:16px; }
   }
 </style>
 </head>
@@ -133,9 +147,8 @@
   <h1>This is a small message from me 💌</h1>
 
   <div class="card-box content-on-top" style="text-align:left;">
-    <p class="cursive">
-First of all, a very happy, happy birthday to you, Nidhi. You’ve probably forgotten me by now, but this is just a small gift from my side, something I hope brings a little smile to your face. I won’t say much, but wherever you are, I genuinely wish you happiness. Enjoy your special day… and your life too. I didn’t add any photos of us because we don’t really have any special pictures or memories together, and I even thought about taking a picture from your Instagram, but it felt like invading your privacy, so I chose not to. I just hope you’ll like this small gesture, and even if we don’t talk much anymore, I still wish that kindness and good things keep finding you. Take care, and have a beautiful birthday. ^_^
-    </p>
+    <!-- trimmed leading whitespace and set margin:0 above in CSS -->
+    <p class="cursive">First of all, a very happy, happy birthday to you, Nidhi. You’ve probably forgotten me by now, but this is just a small gift from my side, something I hope brings a little smile to your face. I won’t say much, but wherever you are, I genuinely wish you happiness. Enjoy your special day… and your life too. I didn’t add any photos of us because we don’t really have any special pictures or memories together, and I even thought about taking a picture from your Instagram, but it felt like invading your privacy, so I chose not to. I just hope you’ll like this small gesture, and even if we don’t talk much anymore, I still wish that kindness and good things keep finding you. Take care, and have a beautiful birthday. ^_^</p>
 
     <p style="text-align:center; font-weight:700; margin-top:12px;">Once again Happy Birthday Nidhi 🩷</p>
   </div>
@@ -168,15 +181,14 @@ function createHeart(){
   const s = document.createElement('span');
   s.className = 'heart';
   s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-  // keep hearts inside viewport using % and translate
   const leftPct = randomBetween(5,95);
   s.style.left = leftPct + 'vw';
   const size = Math.floor(randomBetween(16,32));
   s.style.fontSize = size + 'px';
-  const duration = randomBetween(10,20); // slower
+  const duration = randomBetween(10,20);
   s.style.animationDuration = `${duration}s, ${randomBetween(3,6)}s, 0.6s`;
   s.style.opacity = (randomBetween(.75,1)).toString();
-  s.style.zIndex = 2; // above background, below cards
+  s.style.zIndex = 2;
   heartContainer.appendChild(s);
   setTimeout(()=>{ if(s && s.parentNode) s.remove(); }, (duration+1)*1000);
 }
@@ -199,10 +211,7 @@ window.addEventListener('load', ()=>{
 });
 
 /* Global decorative background across all pages (chocolate, balloons, hearts).
-   Improvements:
-   - Use percentage positions and translate(-50%,-50%) to avoid pushing layout off-screen.
-   - Increased opacity range so items are more visible.
-   - Added clustering across the whole page and resized on window resize.
+   Reduced the opacity range so decorations are visible but not intrusive.
 */
 const decorChars = ['🍫','🎈','❤️','💚','💙','💜','💛'];
 const decorLayer = document.getElementById('decorLayer');
@@ -217,11 +226,10 @@ function addDecor(count = 40){
     el.style.left = left + '%';
     el.style.top = top + '%';
     el.style.transform = 'translate(-50%,-50%) rotate(' + (Math.floor(Math.random()*60)-30) + 'deg)';
-    // visible sizes but not overpowering
     const size = Math.floor(Math.random()*46) + 22; // 22 - 68 px
     el.style.fontSize = size + 'px';
-    // increased opacity so decorations are visible but still soft
-    el.style.opacity = (Math.random() * 0.25 + 0.18).toString(); // 0.18 - 0.43
+    // LOWER opacity (subtle): 0.06 - 0.22
+    el.style.opacity = (Math.random() * 0.16 + 0.06).toString();
     el.style.zIndex = 0;
     el.innerText = decorChars[Math.floor(Math.random()*decorChars.length)];
     decorLayer.appendChild(el);
